Improve recommendation assistant with budget-aware suggestions