@@ -7,11 +7,12 @@ import com.example.shopflowers.model.entity.RecommendationResult;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class RecommendationEngine {
 
     public List<RecommendationResult> recommend(List<FlowerProduct> products, RecommendationRequest request) {
-        List<RecommendationResult> results = new ArrayList<>();
+        List<RecommendationResult> allResults = new ArrayList<>();
 
         for (FlowerProduct product : products) {
             if (product.getStockQuantity() <= 0) {
@@ -20,13 +21,16 @@ public class RecommendationEngine {
 
             int score = 0;
             List<String> reasons = new ArrayList<>();
+            boolean withinBudget = product.getPrice() <= request.getMaxBudget();
 
-            if (product.getPrice() <= request.getMaxBudget()) {
+            if (withinBudget) {
                 score += 3;
                 reasons.add("Compatibile con il budget");
             } else if (product.getPrice() <= request.getMaxBudget() + 10) {
                 score += 1;
-                reasons.add("Leggermente sopra budget");
+                reasons.add("Leggermente sopra il budget");
+            } else {
+                continue;
             }
 
             if (matchesColor(product, request.getPreferredColor())) {
@@ -46,15 +50,25 @@ public class RecommendationEngine {
 
             if (score > 0) {
                 String reason = String.join(", ", reasons);
-                results.add(new RecommendationResult(product, reason, score));
+                allResults.add(new RecommendationResult(product, reason, score, withinBudget));
             }
         }
 
-        results.sort(Comparator
+        allResults.sort(Comparator
                 .comparingInt(RecommendationResult::getScore).reversed()
+                .thenComparing((RecommendationResult r) -> !r.isWithinBudget())
                 .thenComparingDouble(r -> Math.abs(r.getProductPrice() - request.getMaxBudget())));
 
-        return results.stream().limit(3).toList();
+        List<RecommendationResult> withinBudgetResults = allResults.stream()
+                .filter(RecommendationResult::isWithinBudget)
+                .limit(3)
+                .collect(Collectors.toList());
+
+        if (!withinBudgetResults.isEmpty()) {
+            return withinBudgetResults;
+        }
+
+        return allResults.stream().limit(3).collect(Collectors.toList());
     }
 
     private boolean matchesColor(FlowerProduct product, String preferredColor) {
@@ -74,7 +88,7 @@ public class RecommendationEngine {
             case "ANNIVERSARIO", "ROMANTICO" ->
                     containsOneOf(name, variety, color, "rosa", "rose", "rosso", "rossa");
             case "LAUREA" ->
-                    containsOneOf(name, variety, color, "rosso", "rosso intenso", "giallo", "misto");
+                    containsOneOf(name, variety, color, "rosso", "giallo", "misto", "vivace");
             case "RINGRAZIAMENTO" ->
                     containsOneOf(name, variety, color, "bianco", "giallo", "delicato");
             case "COMPLEANNO" ->
@@ -92,7 +106,7 @@ public class RecommendationEngine {
 
         return switch (style.toUpperCase()) {
             case "ROMANTICO" ->
-                    containsOneOf(name, variety, color, "rosa", "rose", "rosso", "rosa");
+                    containsOneOf(name, variety, color, "rosa", "rose", "rosso");
             case "ELEGANTE" ->
                     containsOneOf(name, variety, color, "bianco", "giglio", "elegante", "raffinato");
             case "ALLEGRO" ->
@@ -100,7 +114,7 @@ public class RecommendationEngine {
             case "SEMPLICE" ->
                     containsOneOf(name, variety, color, "margherita", "semplice", "delicato");
             case "RAFFINATO" ->
-                    containsOneOf(name, variety, color, "giglio", "bianco", "rosa", "premium");
+                    containsOneOf(name, variety, color, "giglio", "bianco", "premium", "rosa");
             default -> false;
         };
     }
